<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

 	<LinearLayout
       
        android:id="@+id/linearLayoutSum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >
        
       <EditText
	        
	        android:id="@+id/editText2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            
	        android:maxLength="250"
	        android:maxLines="4"
	        
            android:hint="@string/sms_text_placeholder">
	        
	     <requestFocus />
	     
	    </EditText>
       
   </LinearLayout>

   <LinearLayout
       
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayoutSum"
        android:orientation="horizontal" >
   
  	 <Button
       android:id="@+id/button1"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"

       android:gravity="center"
       android:text="@string/send_button_text"
       
        />
       
   
   
	</LinearLayout>

   
	<LinearLayout
       
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
         
        android:orientation="horizontal" >

		<CheckBox
			android:id="@+id/checkBox1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/send_coords_text" />
       
	</LinearLayout>

	<LinearLayout
       
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal" >

 		<TextView
           android:id="@+id/textView1"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:gravity="center"
           android:layout_weight="1"
           android:text="" />
       
	</LinearLayout>
	
<LinearLayout
       
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout4"
        android:gravity="center"
    	android:orientation="vertical"
    	android:paddingTop="8dp" >
       
 		 <Button
 		    android:id="@+id/button3"
 		    style="?android:attr/buttonStyleSmall"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    
 		     
 		    android:text="@string/enable_gps_btn" />
 		
	</LinearLayout>

<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout5"
    android:layout_centerHorizontal="true"

    android:text="Button" />



</RelativeLayout>
